--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,26 @@
-# Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+# Dependencies
+markdown:            redcarpet
+highlighter:         pygments
 
-# Build settings
-markdown: kramdown
+# Permalinks
+#
+# Use of `relative_permalinks` ensures post links from the index work properly.
+permalink:           pretty
+relative_permalinks: true
+
+# Setup
+title:               codeworm96 
+tagline:             'blog'
+description:         'Records of coding'
+url:                 http://codeworm96.github.io/
+baseurl:             /
+paginate:            5
+
+# About/contact
+author:
+  name:              codeworm96
+  url:               http://codeworm96.github.io/
+  email:             codeworm96@outlook.com
+
+# Custom vars
+version:             1.0.0
